--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body.dark header .search-box span { color: rgb(255 255 255 / 50%);}
 #img-results { padding: 50px 0; display: flex; flex-wrap: wrap; justify-content: space-between;}
 #img-results .img-block { width: 18%; height: 200px; box-sizing: border-box; background: rgb(26 29 46); margin: 0 1% 40px; box-sizing: border-box; border-radius: 10px; overflow: hidden;}
 #img-results .img-block figure{ border-radius: 10px; margin: 0; padding: 0; line-height: 0; }
-#img-results .img-block figure img{ line-height: 0; object-fit: contain;}
+#img-results .img-block figure img{ line-height: 0; object-fit: fill; width: 100%;}
 #error { text-align: center; display: none;}
 #error h2 { font-size: 20px; font-weight: 300; text-transform: uppercase; display: inline-block;  padding: 10px 20px; border-radius: 15px;}
 #img-results .img-block {position: relative; }
