--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{ margin: 0; padding: 0; box-sizing: border-box;}
-body{ font-family: 'Poppins', sans-serif; min-height: 100vh;}
+body{ font-family: 'Poppins', sans-serif; min-height: 100vh; position: relative;}
 body.dark { background-color: #0F0E1C;}
 header { display: flex; align-items: center; padding:10px 15px; justify-content: space-between; flex-wrap: wrap;  border-radius: 0 0 20px 20px}
 header .logo-block { max-width: 200px;margin: 0; padding: 0; }
@@ -12,10 +12,10 @@ header .search-box span {position: absolute; top: 11px; right: 16px; font-size: 
 body.dark header .search-box input{ color: #fff;  background-color: #0F0E1C; }
 body.dark header .search-box span { color: rgb(255 255 255 / 50%);}
 .settings-block #toggle-switch { cursor: pointer; background: none; border: none; outline: none;}
-#img-results { padding: 50px 0; display: grid}
-#img-results .img-block { width: 18%; height: 200px; box-sizing: border-box; background: rgb(26 29 46); margin: 0 1% 40px; box-sizing: border-box; border-radius: 10px; overflow: hidden;}
-#img-results .img-block figure{ border-radius: 10px; margin: 0; padding: 0; line-height: 0; }
-#img-results .img-block figure img{ line-height: 0; object-fit: fill; width: 100%;}
+#img-results { padding: 50px 0; display: grid;  grid-template-columns: repeat( auto-fit, minmax(300px, 1fr)); grid-auto-flow:dense;  grid-gap: 15px;}
+#img-results .img-block {  box-sizing: border-box; background: rgb(26 29 46);  box-sizing: border-box; border-radius: 10px; overflow: hidden; margin: 0;}
+#img-results .img-block figure{ border-radius: 10px; height: 100%; margin: 0; padding: 0; line-height: 0; }
+#img-results .img-block figure img{ width: 100%; height: 100%; object-fit: cover;}
 #error { text-align: center; display: none;}
 #error h2 { font-size: 20px; font-weight: 300; text-transform: uppercase; display: inline-block;  padding: 10px 20px; border-radius: 15px;}
 #img-results .img-block {position: relative; }
@@ -25,4 +25,11 @@ body.dark header .search-box span { color: rgb(255 255 255 / 50%);}
 #img-results .img-block .img-details  a{display: inline-flex; width: 30px; height: 30px; background-color: rgb(15 14 28); color: rgb(255 255 255); border-radius: 50%; align-items: center; justify-content: center; text-decoration: none;}
 #img-results .img-block .img-details  a span { font-size: 15px;}
 body.dark #error h2 {color: #fff; background-color: #1A1D2E;}
+
+.large-img-container { position: absolute;  width: calc(100% - 60px); margin: 0 auto; background-color: #1A1D2E; padding: 20px; border-radius: 10px; min-height: 90vh; box-shadow: 0 0 15px 3px #10121c; top: 15px; left: 30px;}
+.large-img-container .close-button {    position: fixed; top: 13px; right: 33px; width: 30px; height: 30px; background: rgb(255 255 255); display: inline-flex; justify-content: center; align-items: center; border-radius: 50%; font-size: 15px; color: rgb(26 29 46); cursor: pointer; z-index: 99;}
+.large-img-container figure { text-align: center;}
+.large-img-container figure img { max-width:calc(100% - 60px); height: auto; }
+.open-container-img { overflow: hidden;}
+.box-large-container { overflow-x: hidden; overflow-y: auto; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgb(0 0 0 / 78%);}
 
