--- a/style.css
+++ b/style.css
@@ -26,10 +26,51 @@ body.dark header .search-box span { color: rgb(255 255 255 / 50%);}
 #img-results .img-block .img-details  a span { font-size: 15px;}
 body.dark #error h2 {color: #fff; background-color: #1A1D2E;}
 
-.large-img-container { position: absolute;  width: calc(100% - 60px); margin: 0 auto; background-color: #1A1D2E; padding: 20px; border-radius: 10px; min-height: 90vh; box-shadow: 0 0 15px 3px #10121c; top: 15px; left: 30px;}
+.large-img-container { position: absolute;  width: calc(100% - 60px); margin: 0 auto; background-color: #1A1D2E; padding: 0; border-radius: 10px; min-height: 90vh; box-shadow: 0 0 15px 3px #10121c; top: 15px; left: 30px; padding-bottom: 40px;}
 .large-img-container .close-button {    position: fixed; top: 13px; right: 33px; width: 30px; height: 30px; background: rgb(255 255 255); display: inline-flex; justify-content: center; align-items: center; border-radius: 50%; font-size: 15px; color: rgb(26 29 46); cursor: pointer; z-index: 99;}
 .large-img-container figure { text-align: center;}
 .large-img-container figure img { max-width:calc(100% - 60px); height: auto; }
 .open-container-img { overflow: hidden;}
-.box-large-container { overflow-x: hidden; overflow-y: auto; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgb(0 0 0 / 78%);}
+.box-large-container {  overflow-x: hidden; overflow-y: auto; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgb(0 0 0 / 78%);}
+.box-large-container .title-block { background: #0F0E1C; display: flex; justify-content: space-between; align-items: center; padding: 20px;margin-bottom: 25px;}
+.box-large-container .title-block .author { display: inline-flex; align-items: center;}
+.box-large-container .title-block .author img { width: 50px; height: auto; border-radius: 50%; }
+.box-large-container .title-block .author p { font-size: 18px; color: #fff; line-height: 20px; padding: 0 0 0 20px; margin: 0;}
+.box-large-container .title-block .img-by a { display: inline-flex; flex-direction: column; align-items:center; background: #fff;padding: 5px; text-decoration: none;font-size: 13px; color: #1A1D2E; line-height: 16px; text-transform: uppercase; letter-spacing: 0.1em; border-radius: 2px;}
+.box-large-container .title-block .right-block { display: flex; align-items: center;}
+.box-large-container .title-block .right-block p { display: inline-flex; align-items: center; padding: 0 10px; font-size: 14px; color: #fff; line-height: 16px; }
+.box-large-container .title-block .right-block p span{ margin-right: 5px; }
+.box-large-container .title-block .right-block p a{transition: all 0.3s ease; display: inline-flex;align-items: center; font-size: 14px; color:#fff; padding: 0; margin: 0; text-decoration: none; }
+.box-large-container .title-block .right-block p:first-child:hover a{ color: #8AE22E;}
+.box-large-container .bottom-block { display: flex; justify-content: center; padding-top: 20px;}
+.box-large-container .bottom-block p { transition: all 0.3s ease-in-out; cursor: pointer; font-size: 14px; color: #fff; line-height: 16px;     padding: 5px 10px; border: 1px solid rgb(255 255 255 / 62%); border-radius: 2px; margin: 0 5px; box-shadow: 0 0 3px #eaeaea59;}
+.box-large-container .bottom-block p:hover { background: #fff; color: #1A1D2E; }
+
+.gradient {
+    animation-duration: .5s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #0F0E1C;
+    background: linear-gradient(to right, rgb(15 14 28 / 83%) 8%, rgb(15 14 28 / 79%) 38%, rgb(15 14 28 / 58%) 54%);
+    background-size: 1000px 640px;
+    
+    position: relative;
+    
+}
+
+@keyframes placeHolderShimmer{
+    0%{
+        background-position: -468px 0
+    }
+    100%{
+        background-position: 468px 0
+    }
+}
+
+
+
+
+
 
